<resources>
    <string name="app_name">project144.2</string>
    <string name="welcome">Welcome</string>
    <string name="alex_dastjerdi">Alex Dastjerdi</string>
    <string name="search_anything">Search anything</string>
    <string name="pluss_ultra_ndiscount">PLUSS ULTRA\nDiscount!!!</string>
    <string name="buy_now">Buy now</string>
    <string name="explore_popular_categories">Explore popular categories</string>
    <string name="phone">Phone</string>
    <string name="headphone">HeadPhone</string>
    <string name="viewall">ViewAll</string>
    <string name="popular_product">Popular Product</string>
    <string name="see_all">See all</string>
    <string name="explorer">Explorer</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">cart</string>
    <string name="profile">Profile</string>
    <string name="rating">Rating</string>
    <string name="reviews">Reviews</string>
    <string name="buy_now2">Buy now</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="my_cart">My Cart</string>
    <string name="order_summary">Order Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="total_tax">Total Tax</string>
    <string name="total">Total</string>
    <string name="information">Information</string>
    <string name="payment_method">Payment Method</string>
    <string name="your_delivery_address">Your Delivery Address</string>
    <string name="cash">Cash</string>
    <string name="ordernow">OrderNow</string>
    <string name="delivery">Delivery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>